--- a/LandingP.html
+++ b/LandingP.html
@@ -8,7 +8,7 @@
     <title>FreshLink</title>
     
 </head>
-<body>
+<body> 
     <header>
 
             <ul class="NavigationBar">
@@ -47,9 +47,16 @@
                 <img src="Training.png">
                 <p>Training</p>
             </div>
-    </section>
+        </section>
 
-    <section class="team">
+        <div class="video">
+            <div class="img">
+               <img src="farmer.png">
+             </div> 
+           </div>
+            
+
+   <section class="team">
         <div class="Elsie">
             <img src="rwanda-flag-on-background-texture-260nw-1713352585.webp">
             <p>Elsie Ndayiramiye</p>
