--- a/elsie/index.html
+++ b/elsie/index.html
@@ -11,7 +11,7 @@
     <header>
 <h2 class="logo">FreshLink</h2>
 <nav class="navigation">
-    <a href="#">Home</a>
+    <a href="../Stephen/Stephen.html">Home</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Contact</a>
