--- a/elsie/index.html
+++ b/elsie/index.html
@@ -21,7 +21,7 @@
         </nav> 
     </header>
     <main>
-        <section>
+        <section class="sec-1">
             <h1>FreshLink</h1>
             <fieldset>
                 <legend>Fresh, Organic, and Irresistible</legend>
@@ -29,7 +29,7 @@
                     healthy produce while supporting sustainable and eco-friendly farming practices.</h2>
             </fieldset>
         </section>
-        <section>
+        <section class="sec-2">
             <h2>A Remarkable Position</h2>
             <h3>Among Agricultural Companies</h3>
             <p>
@@ -46,7 +46,7 @@
                  crops and enjoy fresh and healthy produce while supporting 
                 sustainable and eco-friendly farming practices.
             </p>
-            <a href="#"><button>Place An Order</button></a>
+            <a href="#"><button class="btn">Place An Order</button></a>
             <div>
                 <div>Vegetables</div>
                 <div>Cereals</div>
@@ -55,7 +55,7 @@
                 <div>Nuts</div>
             </div>
         </section>
-        <section>
+        <section class="sec-3">
             <div>
 
             </div>
@@ -66,33 +66,29 @@
 
             </div>
         </section>
-        <section>
-            <div>
-                <hr>
+        <section class="sec-4">
+            <div class="sec4-div">
                 <div>
                     <ion-icon name="leaf-outline"></ion-icon>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
                 </div>
-                <hr>
                 <div>
                     <ion-icon name="thunderstorm-outline"></ion-icon></ion-icon>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
 
                 </div>
-                <hr>
                 <div>
                     <ion-icon name="sunny-outline"></ion-icon>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
                 </div>
-                <hr>
                 <div>
                     <ion-icon name="earth-outline"></ion-icon>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
                 </div>
-                <hr>
             </div>
             <fieldset>
-                <legend><a href=""><button>Read More</button></a></legend>
+                <legend><a href=""><button class="btn">Read More</button></a></legend>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus harum iste impedit dicta laudantium, nulla neque. Molestias quae iusto et obcaecati corporis non beatae deserunt quod natus ut? Magni, itaque.</p>
             </fieldset>
         </section>
     </main>
