--- a/elsie/pages/home.html
+++ b/elsie/pages/home.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <header>
+        <input type="checkbox" id="toggle">
+        <label for="toggle">
+            <span></span>
+            <span></span>
+        </label>
             <h2 class="name">FreshLink</h2>
             <nav class="navigation">
                 <a href="#">Home</a>
@@ -20,6 +25,5 @@
             </nav> 
         </div>
     </header>
-    
 </body>
 </html>
