--- a/sugira/LandingP.html
+++ b/sugira/LandingP.html
@@ -17,7 +17,7 @@
                     <img src="FreshLink Logo (1).png" class="logo">
                     <li class="items"><a href="#AboutUs">About Us</a></li>
                     <li class="items"><a href="#Products">Products</a></li>
-                    <li class="items"><a href="#JoinComms">Join Comms</a></li>
+                    <li class="items"><a href="#">Join Comms</a></li>
                     <li class="items"><a href="Stephen/Stephen.html">Start Selling</a></li>
                     <li class="items"><a href="#ContactUs">Contact Us</a></li>
 
