--- a/elsie/pages/contact.html
+++ b/elsie/pages/contact.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-    <div class="container"> 
+    <div class="container">
+        <span class="big-circle"></span> 
         <div class="form">
             <div class="contact-info">
                 <h3 class="title">Let's get in touch</h3>
@@ -55,7 +56,7 @@
 
                 <form action="contact.html">
                     <h3 class="title">Contact us</h3>
-                    <div class="input-container">
+                    <div class="input-container focus">
                         <input type="text" name="name" class="input">
                         <label for="">Username</label>
                         <span>Username</span>
@@ -70,7 +71,7 @@
                         <label for="">Phone</label>
                         <span>Phone</span>
                     </div>
-                    <div class="input-container textarea">
+                    <div class="input-container textarea focus ">
                         <textarea name="message" class="input"></textarea>
                         <label for="">Message</label>
                         <span>Message</span>
