--- a/elsie/index.html
+++ b/elsie/index.html
@@ -10,6 +10,7 @@
     <title>FreshLink</title>
 </head>
 <body>
+    <hr>
     <header>
         <h2 class="logo">FreshLink</h2>
         <nav class="navigation">
@@ -20,7 +21,7 @@
             <button class="btnLogin-popup">Login</button>
         </nav> 
     </header>
-    <main>
+    <main class="main">
         <section class="sec-1">
             <h1>FreshLink</h1>
             <fieldset>
@@ -48,26 +49,30 @@
             </p>
             <a href="#"><button class="btn">Place An Order</button></a>
             <div>
-                <div>Vegetables</div>
-                <div>Cereals</div>
-                <div>Fruits<br>&<br>Berries</div>
-                <div>Tubers<br>&<br>Potatoes</div>
-                <div>Nuts</div>
+                <div class="prods">
+                    <img src="images/vegies.jpeg" alt="vegies">
+                    <p class="centered">Vegetables</p>
+                </div>
+                <div class="prods">
+                    <img src="images/grains.jpg" alt="Cereals">
+                    <p class="centered">Grains & Cereals</p>
+                </div>
+                <div class="prods">
+                    <img src="images/fuits.jpg" alt="Fruits and Berries">
+                    <p class="centered">Fruits & Berries</p>
+                </div>
+                <div class="prods">
+                    <img src="images/tuber.jpg" alt="Tubers & Potatoes">
+                    <p class="centered">Tubers & Potatoes</p>
+                </div>
+                <div class="prods">
+                    <img src="images/nuts.jpg" alt="Nuts">
+                    <p class="centered">Nuts</p>
+                </div>
             </div>
         </section>
         <section class="sec-3">
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-            <div>
-
-            </div>
-        </section>
-        <section class="sec-4">
-            <div class="sec4-div">
+            <div class="sec3-div">
                 <div>
                     <ion-icon name="leaf-outline"></ion-icon>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
@@ -94,5 +99,6 @@
     </main>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="scripts/header.js"></script>
 </body>
 </html>
