--- a/elsie/index.html
+++ b/elsie/index.html
@@ -16,7 +16,7 @@
         <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="../sugira/LandingP.html">About</a>
-            <a href="#">Services</a>
+            <a href="#">Products</a>
             <a href="pages/contact.html">Contact</a>
             <a href="pages/login.html"><button class="btnLogin-popup">Login</button></a>
         </nav> 
