--- a/elsie/pages/contact.html
+++ b/elsie/pages/contact.html
@@ -13,11 +13,11 @@
     <header>
         <h2 class="logo">FreshLink</h2>
         <nav class="navigation">
-            <a href="index.html">Home</a>
-            <a href="../sugira/LandingP.html">About</a>
-            <a href="#">Services</a>
-            <a href="pages/contact.html">Contact</a>
-            <a href="pages/login.html"><button class="btnLogin-popup">Login</button></a>
+            <a href="../index.html">Home</a>
+            <a href="../../sugira/LandingP.html">About</a>
+            <a href="#">Products</a>
+            <a href="../pages/contact.html">Contact</a>
+            <a href="../pages/login.html"><button class="btnLogin-popup">Login</button></a>
         </nav> 
     </header>
     <div class="container">
