--- a/sugira/LandingP.html
+++ b/sugira/LandingP.html
@@ -15,11 +15,11 @@
 
                 <ul class="NavigationBar">
                     <img src="FreshLink Logo (1).png" class="logo">
-                    <li class="items"><a href="#AboutUs">About Us</a></li>
+                    <li class="items"><a href="../elsie/index.html">Home</a></li>
+                    <li class="items"><a href="./LandingP.html">About</a></li>
                     <li class="items"><a href="#Products">Products</a></li>
+                    <li class="items"><a href="../elsie/pages/contact.html">Contact</a></li>
                     <li class="items"><a href="../elsie/pages/login.html">Join Comms</a></li>
-                    <li class="items"><a href="Stephen/Stephen.html">Start Selling</a></li>
-                    <li class="items"><a href="#ContactUs">Contact Us</a></li>
 
                 </ul>
 
