linked all pages

--- a/elsie/pages/contact.html
+++ b/elsie/pages/contact.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
             <a href="../index.html">Home</a>
             <a href="../../sugira/LandingP.html">About</a>
-            <a href="#">Products</a>
+            <a href="../pages/services.html">Products</a>
             <a href="../pages/contact.html">Contact</a>
             <a href="../pages/login.html"><button class="btnLogin-popup">Login</button></a>
         </nav> 
@@ -91,6 +91,30 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="contact-nav">          
+            <div id="contact">
+                <!--https://www.geeksforgeeks.org/difference-between-hidden-and-aria-hidden-attributes-in-html/-->
+                <p><a href="tel:+250-787-771-750" aria-hidden="true" >Phone: +250787771750</a></p>
+                <p><a href="mailto:freshlink@gmail.com" aria-hidden="true" target="_blank">Email: freshlink@gmail.com</a></p>
+            </div>
+            <nav class="navigation">
+                <a href="../index.html">Home</a>
+                <a href="../../sugira/LandingP.html">About</a>
+                <a href="../pages/services.html">Services</a>
+                <a href="../pages/contact.html">Contact</a>
+            </nav>  
+            <div id="social">
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"> &nbsp; Facebook </i></a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"> &nbsp; Twitter </i></a>
+                <a href="#"><i class="fa fa-instagram" aria-hidden="true" target="_blank"> &nbsp; Instagram </i></a>
+            </div>
+        </div>
+        <div class="copyright">
+            <p><span style="color:white; font-weight: bold">Copyright</span> <span style="color: yellowgreen; font-weight: bold;">© 2023 FreshLink</span>  <span style="color:white; font-weight: bold">All rights reserved</span></p>
+        </div>
+    </footer>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="../scripts/contact.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
