--- a/elsie/pages/login.html
+++ b/elsie/pages/login.html
@@ -88,10 +88,10 @@
                 <p><a href="mailto:freshlink@gmail.com" aria-hidden="true" target="_blank">Email: freshlink@gmail.com</a></p>
             </div>
             <nav class="navigation">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../../sugira/LandingP.html">About</a>
+                <a href="../pages/services.html">Products</a>
+                <a href="../pages/contact.html">Contact</a>
             </nav>  
             <div id="social">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"> &nbsp; Facebook </i></a>
