--- a/sugira/LandingP.html
+++ b/sugira/LandingP.html
@@ -17,7 +17,7 @@
                     <img src="FreshLink Logo (1).png" class="logo">
                     <li class="items"><a href="../elsie/index.html">Home</a></li>
                     <li class="items"><a href="./LandingP.html">About</a></li>
-                    <li class="items"><a href="#Products">Products</a></li>
+                    <li class="items"><a href="../elsie/pages/services.html">Products</a></li>
                     <li class="items"><a href="../elsie/pages/contact.html">Contact</a></li>
                     <li class="items"><a href="../elsie/pages/login.html">Join Comms</a></li>
 
