--- a/elsie/index.html
+++ b/elsie/index.html
@@ -47,7 +47,7 @@
                  crops and enjoy fresh and healthy produce while supporting 
                 sustainable and eco-friendly farming practices.
             </p>
-            <a href="#"><button class="btn">Place An Order</button></a>
+            <a href="../elsie/pages/services.html"><button class="btn">Place An Order</button></a>
             <div>
                 <div class="prods">
                     <img src="images/vegies.jpeg" alt="vegies">
@@ -75,25 +75,26 @@
             <div class="sec3-div">
                 <div>
                     <ion-icon name="leaf-outline"></ion-icon>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
+                    <p>Cropping systems can vary significantly based on factors such as climate, soil type, available resources, and cultural practices, leading to a wide range of approaches to agriculture around the world.</p>
                 </div>
                 <div>
                     <ion-icon name="thunderstorm-outline"></ion-icon></ion-icon>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
+                    <p>Cropping systems are greatly influenced by climate, with factors such as temperature, rainfall, and humidity playing a significant role in determining which crops can be grown and how they are managed.</p>
 
                 </div>
                 <div>
                     <ion-icon name="sunny-outline"></ion-icon>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
+                    <p>Cropping systems are designed to ensure the safety of both farmers and consumers, with considerations such as pesticide use, food handling, and worker protection practices varying depending on local regulations and cultural norms.</p>
                 </div>
                 <div>
                     <ion-icon name="earth-outline"></ion-icon>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, velit, dicta et repellendus nam ipsum veritatis sed ad distinctio dignissimos vitae! Beatae dolorum perferendis nobis animi reprehenderit harum quasi quo.</p>
+                    <p>Cropping systems are impacted by environmental factors such as soil type, topography, and available water, which can influence the choice of crops and management practices used to optimize yields and sustainability.</p>
                 </div>
             </div>
             <fieldset>
                 <legend><a href=""><button class="btn">Read More</button></a></legend>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus harum iste impedit dicta laudantium, nulla neque. Molestias quae iusto et obcaecati corporis non beatae deserunt quod natus ut? Magni, itaque.</p>
+                <p>USING INNOVATIVE EQUIPMENT TO REDUCE TIME AND ENERGY IN FARMING
+                </p>
             </fieldset>
         </section>
     </main>
