--- a/elsie/pages/contact.html
+++ b/elsie/pages/contact.html
@@ -25,21 +25,24 @@
         <div class="form">
             <div class="contact-info">
                 <h3 class="title">Let's get in touch</h3>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Similique accusamus at excepturi! Quidem perspiciatis necessitatibus, ullam, id cupiditate sequi corporis laborum sapiente, deserunt eius ex esse neque iusto sit quisquam.
-                </p>
+                <p class="text">We would like to extend a warm invitation to get in touch with us! Whether you have a question, feedback, or just want to say hello, we would love to hear from you.  
+                    Please fill out the form on the side with your name, email address, and message. We will do our best to respond as soon as possible.  
+                    
+                    Thank you for reaching out to us!  
+                    
+                    Best regards,</p>
                 <div class="info">
                     <div class="information">
                     <span class="icon"><ion-icon name="location"></ion-icon></span>
-                    <p>92 cherry</p>
+                    <p>kigali,Rwanda</p>
                     </div>
                 <div class="information">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <p>92 cherry</p>
+                    <p>freshlink@gmail.com</p>
                     </div>
                 <div class="information">
                     <span class="icon"><ion-icon name="call"></ion-icon></span>
-                        <p>92 cherry</p>
+                        <p>+250787771750</p>
                         </div>
                 </div>
             <div class="socialmedia">
