--- a/elsie/pages/services.html
+++ b/elsie/pages/services.html
@@ -12,7 +12,7 @@
         <h2 class="logo">FreshLink</h2>
         <nav class="navigation">
             <a href="../index.html">Home</a>
-            <a href="../../sugira/LandingP.html">About Us</a>
+            <a href="../../sugira/LandingP.html">About</a>
             <a href="services.html">Products</a>
             <a href="../pages/contact.html">Contact</a>
             <button class="btnLogin-popup">Login</button>
