--- a/elsie/pages/services.html
+++ b/elsie/pages/services.html
@@ -24,7 +24,7 @@
             <h4></h4>
             <p>Fresh Beans</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-            <p>$2</p>
+            <p class="price">$2</p>
             <button class="btn">Buy now</button>
         </section>
         <section>
@@ -32,7 +32,7 @@
             <h4></h4>
             <p>Fresh Berries</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-            <p>$2</p>
+            <p class="price">$2</p>
             <button class="btn">Buy now</button>
         </section>
     <section>
@@ -40,7 +40,7 @@
         <h4></h4>
         <p>Fresh Cabbage</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     <section>
@@ -48,7 +48,7 @@
         <h4></h4>
         <p>Fresh cassava</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     <section>
@@ -56,7 +56,7 @@
         <h4></h4>
         <p>Fresh Beans</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     <section>
@@ -64,7 +64,7 @@
         <h4></h4>
         <p>Fresh Beans</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     <section>
@@ -72,7 +72,7 @@
         <h4></h4>
         <p>Fresh Beans</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     <section>
@@ -80,7 +80,7 @@
         <h4></h4>
         <p>Fresh Beans</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     <section>
@@ -88,7 +88,7 @@
         <h4></h4>
         <p>Fresh Beans</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi velit ea officiis eum doloremque adipisci molestiae ex. Sapiente voluptatum, quia, quas nulla aperiam repudiandae sunt repellendus illo quam, at necessitatibus.</p>
-        <p>$2</p>
+        <p class="price">$2</p>
         <button class="btn">Buy now</button>
     </section>
     </main>
