veg pic linking

--- a/elsie/index.html
+++ b/elsie/index.html
@@ -50,7 +50,7 @@
             <a href="../elsie/pages/services.html"><button class="btn">Place An Order</button></a>
             <div>
                 <div class="prods">
-                    <img src="images/vegies.jpeg" alt="vegies">
+                    <img src="images/vegies.jpeg.jpg" alt="vegies">
                     <p class="centered">Vegetables</p>
                 </div>
                 <div class="prods">
