--- a/Stephen/Stephen.html
+++ b/Stephen/Stephen.html
@@ -28,32 +28,16 @@
           <input type="password" id="password" name="password" required>
           <button type="submit">Login</button>
         </form>
+
+        <div class="signup">
+          <a href="signup.html">Signup</a>
+        </div>
+
         <div class="google-login">
           <button>Sign in with Google</button>
         </div>
       </section>
-      <section class="sign-up">
-        <h2>Sign Up</h2>
-        <form>
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required>
-          <label for="organization">Organization</label>
-          <input type="text" id="organization" name="organization" required>
-          <label for="country">Country</label>
-          <input type="text" id="country" name="country" required>
-          <label for="city">City</label>
-          <input type="text" id="city" name="city" required>
-          <label for="address">Address</label>
-          <input type="text" id="address" name="address" required>
-          <label for="zip">Zip Code</label>
-          <input type="text" id="zip" name="zip" required>
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" required>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
-          <button type="submit">Sign Up</button>
-        </form>
-      </section>
+
     </main>
     <footer>
       <p>Made with love</p>
